--- a/shyun_c++/0729/0729/0729.vcxproj
+++ b/shyun_c++/0729/0729/0729.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="04practice.cpp" />
     <ClCompile Include="0729.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
