--- a/shyun_c++/0729/0729/0729.vcxproj.filters
+++ b/shyun_c++/0729/0729/0729.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="0729.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="04practice.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
